# ccc_l3_aug_practical

./: .env.example  .gitignore  CHANGES.md  L2_M10_Conversational_RAG_with_Memory.ipynb  L2_M10_Multi-Agent_Orchestration.ipynb  L2_M11_Resource_Management_Throttling.ipynb  L2_M11_Tenant-Specific_Customization.ipynb  L2_M11_Tenant_Isolation_Strategies.ipynb  L2_M11_Vector_Index_Sharding.ipynb  L2_M12_Billing_Integration.ipynb  L2_M12_Self-Service_Tenant_Onboarding.ipynb  L2_M12_Tenant_Lifecycle_Management.ipynb  L2_M12_Usage_Metering_Analytics.ipynb  L2_M7_Application_Performance_Monitoring.ipynb  L2_M9_Advanced_Reranking_Strategies.ipynb  L2_M9_Hypothetical_Document_Embeddings_(HyDE).ipynb  L2_M9_Multi-Hop_Recursive_Retrieval.ipynb  L2_M9_Query_Decomposition_Planning.ipynb  L3_M13_Governance_Compliance_Documentation.ipynb  L3_M13_Launch_Preparation_Marketing.ipynb  L3_M13_Portfolio_Showcase_Career_Launch.ipynb  M10_3_Multi_Agent_Orchestration_Augment.md  M11_3_Resource_Management_Throt.md  M12_3_Self_Service_Tenant_Onboardin.md  M13_2_MAIN_SCRIPT.md  M13_2_MAIN_SCRIPT_PART2.md  M9_2_Multi_Hop_Recursive_Retrieval.md  README.md  RESTRUCTURE_NOTES.md  app.py  augmented_M10_VideoM10_1_ReAct_Pat.md  augmented_M10_VideoM10_2_Tool_Calling_Funct.md  augmented_M10_VideoM10_4_Conversational_RAG.md  augmented_M11_VideoM11_1_Tenant_Isolation_S.md  augmented_M11_VideoM11_2_Tenant.md  augmented_M11_VideoM11_4_Vector_Ind.md  augmented_M12_VideoM12_1_Usage_Mete.md  augmented_M12_VideoM12_2_Billin.md  augmented_M13_VideoM13_1_Comple.md  augmented_M13_VideoM13_2_Governance.md  (+36 more)
(+92 files in other folders)
